--- a/src/components/home/featured/Featured.css
+++ b/src/components/home/featured/Featured.css
@@ -1,7 +1,7 @@
 .featured {
-  padding: 10px 0;
-  background-color: #f9f9f9;
+  position: relative;
 }
+
 
 .featured .heading {
   text-align: center;
