--- a/src/components/home/hero/hero.css
+++ b/src/components/home/hero/hero.css
@@ -7,16 +7,17 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  height: 100vh; /* Set height to 100vh to cover full height */
+  height: 138vh; /* Adjusted height to cover full viewport height */
   width: 100%;
   position: relative;
+
+  
 }
 
 .buttons {
   display: flex;
   justify-content: center;
   margin-top: 20px;
-  
 }
 
 .buttons button {
@@ -28,23 +29,45 @@
   cursor: pointer;
   margin-left: 15px;
   margin-right: 15px;
- transition: 0.2s ease-in;
+  transition: 0.2s ease-in;
   font-size: 20px;
 }
 
 .buttons button:hover {
   background-color: #ffffff;
-  color:  rgb(0, 88, 146);
+  color: rgb(0, 88, 146);
 }
 
 .hero .container {
   padding-top: 15%;
+  max-width: 1200px; /* Adjust maximum width as per your design */
+  margin: 0 auto; /* Center align the container */
+}
+
+.moving-yellow-container {
+  background-color: rgb(0, 88, 146);
+  padding: 20px;
+  border-top-left-radius: 100%;
+  border-top-right-radius: 100%;
+  overflow: hidden; /* Hide the bottom part of the container */
+  margin-bottom: 20px; /* Optional: adjust margin as needed */
+  transform: translateY(100%); /* Initial position shifted down */
+  margin-top: 250px; /* Adjust margin-top as needed */
+  transition: transform 0.9s ease, opacity 0.9s ease; /* Add transition for smooth movement */
+  width: auto; /* Adjust width to fit content or use width: 100vw; for full viewport width */
+  height: 100%; /* Example height adjustment */
+}
+
+
+.moving-yellow-container.show {
+  transform: translateY(0); /* Move up to original position */
+  opacity: 1; /* Show element */
 }
 
 .hero h1 {
   color: #ffffff;
   font-size: 42px;
-  padding-top: 140px;
+  padding-top: 20px; /* Reduced padding-top */
 }
 
 .hero p {
@@ -105,4 +128,3 @@ form h4 {
     width: 100%;
   }
 }
-
